Add basic support for Codeset labels
Labels implemented as 'topics' for git repository.
